--- a/web/package.json
+++ b/web/package.json
@@ -16,6 +16,9 @@
     "dayjs": "^1.11.13",
     "immer": "^10.1.1",
     "react": "latest",
+    "react-beautiful-dnd": "^13.1.1",
+    "react-dnd": "^16.0.1",
+    "react-dnd-touch-backend": "^16.0.1",
     "react-dom": "latest",
     "sass": "^1.80.6",
     "swiper": "^11.1.15",
@@ -32,6 +35,7 @@
     "postcss": "^8.4.49",
     "postcss-preset-mantine": "^1.17.0",
     "postcss-simple-vars": "^7.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.11.0",
     "vite": "^5.4.10",
