--- a/game/server/tsconfig.json
+++ b/game/server/tsconfig.json
@@ -3,5 +3,5 @@
   "compilerOptions": {
     "types": ["@citizenfx/server", "@types/node"]
   },
-  "include": ["./**/*.ts", "./**/*.d.ts"]
+  "include": ["./**/*.ts", "./**/*.d.ts", "../shared/**/*.ts", "../shared/**/*.d.ts"]
 }
