--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/node": "^22.2.0",
     "concurrently": "^8.2.2",
     "esbuild": "^0.23.0",
+    "javascript-obfuscator": "^4.1.1",
     "typescript": "^5.5.4"
   },
   "dependencies": {
