--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "build:web": "cd web && pnpm build",
     "-----DEV-----": "",
     "dev": "concurrently \"pnpm:dev:client\" \"pnpm:dev:server\" \"pnpm:dev:web\" \"pnpm:tsc\" -c \"green.bold,cyan.bold\"",
-    "dev:client": "node --es-module-specifier-resolution=node scripts/client -dev",
-    "dev:server": "node --es-module-specifier-resolution=node scripts/server -dev",
+    "dev:client": "node --es-module-specifier-resolution=node scripts/client --dev",
+    "dev:server": "node --es-module-specifier-resolution=node scripts/server --dev",
     "dev:web": "cd web && pnpm dev",
     "-----TSC-----": "",
     "tsc": "concurrently \"pnpm:tsc:*\" -c \"green.bold,cyan.bold\"",
