--- a/web/package.json
+++ b/web/package.json
@@ -13,6 +13,7 @@
     "@citizenfx/three": "^0.100.0",
     "@mantine/core": "^7.16.3",
     "@mantine/hooks": "^7.16.3",
+    "@tabler/icons-react": "^3.34.1",
     "@types/react-transition-group": "^4.4.12",
     "axios": "^1.8.2",
     "dayjs": "^1.11.13",
